--- a/app_http/src/main/res/values/strings.xml
+++ b/app_http/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KennieHttp</string>
+    <string name="dddd">@string/http_data_explain_error</string>
 </resources>
